--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "homepage": "https://github.com/jackieline/MD_Job_Queue#readme",
   "dependencies": {
     "axios": "^0.17.1",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "eslint": "^4.17.0",
     "express": "^4.16.2",
+    "mongodb": "^3.0.2",
     "mongoose": "^5.0.3",
     "nodemon": "^1.14.12"
   },
